project-1/style.css
@charset "utf-8";

/* google fonts */
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

/* consistent box sizing */
html {
	box-sizing: border-box;
}
*, *:before, *:after {
	box-sizing: inherit;
}

/* prefers-reduced-motion requirement */
@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* fonts */
p {
    /* EB Garamond from Google Fonts */
    font-family: "EB Garamond", 'Times New Roman', Times, serif;
}
h1, header h2 {
    font-family: 'Times New Roman', Times, serif;
}
h2, h3, h4, h5, h6 {
    /* Work Sans from Google Fonts */
    font-family: "Work Sans", sans-serif;
}
/* buttons (links that aren't children of p's, spans or ordered lists) */
a:not(p a, span a, ol a) {
    /* Quantico from Google Fonts */
    font-family: "Quantico", sans-serif;
    letter-spacing: -1px;
}

/* global selectors */

/* links */
a {
    color: rgb(169, 255, 255);
}
header p a:visited, main a:visited, aside a:visited {
    color: rgb(148, 42, 255);
}

/* NOTE: positioning of selectors is mostly based on order in html */

body {
    width: 100%;
    margin: auto;
    background-color: black;

    /* hide horizontal scrollbar (idk what's causing it...) */
    overflow-x: hidden;
}

/* skip to main */
.skip-link {
    /* hide text (is replaced with button below) */
    /* this also makes it unclickable */
    visibility: hidden;

    color: black;
    text-decoration: none;

    position: absolute;
    top: 440px;
    /* left: 54vw; */
    left: 50%;

    /* prevent repositioning issues on small screens */
    font-size: 0;

    transform: rotate(180deg);
}
/* replacement graphic */
.skip-link:after {
    content: "^";

    visibility: visible;
    background-color: white;
    padding: 3px 13px 0 13px;
    border-radius: 20px;

    font-size: 32px;

    box-shadow: 0 -5px 5px black;

    position: relative;
    left: -1.5em;
    top: -4px;
    transition-duration: .1s;

    /* other styling is in above selector */
}
/* weird selector for when the after portion is hovered over */
.skip-link:hover.skip-link:after {
    background-color: rgb(255, 253, 206);

    top: -9px;
    transition-duration: .1s;
}

/* header stuff */

/* container */
header div {
    display: flex;
    flex-direction: column;

    text-align: center;

    background-color: rgb(12, 0, 70);

    /* image credit: James Web Telescope from Rawpixel - https://www.rawpixel.com/image/7514064/photo-image-public-domain-galaxy-space */
    /* TODO: UNCOMMENT THE IMAGE */
    background-image: url("images/James Web Telescope - Rawpixel (small).jpg");
    background-repeat: no-repeat;
    background-size: cover;
    /* background-position-x: center;
    background-position-y: top; */
    
    height: 35rem;
    width: 100%;

    /* cinematic black bars at top and bottom */
    margin: 4rem auto;

    color: white;
}

/* title */
header h1 {
    text-shadow: black 0 5px 5px;
    text-decoration: underline;
    font-size: 10rem;

    margin: 5rem auto 0 auto;
    width: 100%;
}

/* subheader */
header h2 {
    font-style: italic;
    color: black;
    background-color: rgb(255 187 86);
    border: #000000 .2rem solid;

    margin: 1rem auto 0 auto;
    /* width: 50%; */
    width: 47.5rem;
}

/* authors */
header p {
    background-image: linear-gradient(black, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));

    margin: 0 auto;
    /* width: 50%; */
    width: 47.5rem;

    padding: 1rem 0 2rem 0;
}

/* github button (also in footer) */
.link-github {
    width: 8em;
    padding: 8px;

    margin: 0 auto;
    /* margin-left: 40%; */

    font-size: 120%;

    background-color: white;
    /* border: rgb(0, 0, 0) solid .2rem; */

    border-radius: 20px;

    color: black;
    text-decoration: none;

    box-shadow: 0 5px 5px black;
}
.link-github:hover {
    background-color: rgb(255, 253, 206);
    /* border-color: cyan; */
}

/* star svg */
.link-github svg {
    width: 10px;

    position: relative;
    top: -1.5px;
}

/* JUST this github button */
header .link-github {
    position: relative;
    left: -50px;
}

/* navigation */

nav {
    background-image: linear-gradient(rgba(0, 0, 0, 0), #8c4029, #8c4029, rgba(0, 0, 0, 0));

    position: sticky;
    top: -30px;

    /* height: 10vw; */
    padding: 10px;
}

nav ul {
    display: flex;

    justify-content: center;
    text-align: center;

    padding: 0;

    height: inherit;
}

nav ul li {
    margin: 1vw;

    list-style: none;
}

nav ul li a {
    position: relative;
    top: 0;
    transition-duration: .1s;

    padding: 1.2em 1em;

    font-size: 1.2em;

    /* background-color: rgb(255, 149, 0); */
    background-image: linear-gradient(rgb(255, 149, 0), rgb(255, 185, 88));

    box-shadow: 0 5px 10px black;

    border-radius: 1vw;

    color: black;
    text-decoration: none;

    /* highlight to look like an engraved button */
    text-shadow: 0 -2px 2px rgb(255, 255, 255);
}
/* hover for all */
nav ul li a:hover, nav ul li:nth-of-type(even) a:hover {
    /* background-color: rgb(255, 252, 157); */
    background-image: linear-gradient(rgb(255, 252, 157), rgb(255, 248, 57));

    /* invert so that lighting looks right */
    text-shadow: 0 2px 2px rgb(255, 255, 255);

    top: 3px;
}

/* every other nav button */
nav ul li:nth-of-type(even) a {
    /* background-color: rgb(255, 185, 88); */
    background-image: linear-gradient(rgb(255, 185, 88), rgb(255, 215, 160));
}

/* main portion */

main {
    background-color: rgb(23, 9, 29);
    color: rgb(255, 231, 208);

    border: rgb(108, 97, 87) dotted 5px;
    width: 85%;
    margin: 4rem auto auto auto;

    font-size: 120%;

    text-align: center;
}

main p {
    text-indent: 1em;
    text-align: justify;
}
main p strong {
    font-size: 125%;
    font-style: italic;
}

main li {
    text-align: justify;
}

main h2 {
    background-image: linear-gradient(rgba(0, 0, 0, 0), #8c4029, #8c4029, rgba(0, 0, 0, 0));
    color: rgb(209, 206, 255);
    text-shadow: 0 4px 0 rgb(0, 0, 0);

    font-size: 200%;

    font-weight: bold;

    /* text-decoration: underline; */

    width: 90%;

    border: rgb(23, 9, 29) 5px dashed;

    margin: auto;
}

main h3 {
    /* same as <strong> parts */
    font-size: 125%;
    font-style: italic;

    /* extra */
    border: rgb(54 37 61) dotted 5px;
    border-top: 0;
    border-bottom: 0;
    width: 10em;
    margin: auto;

    /* color: rgb(209, 206, 255); */
}

main blockquote {
    background-color: black;
    /* border: rgb(108, 97, 87) solid 5px; */
    padding: 5%;

    width: 90%;
    margin: auto;

    border-radius: 15px;

    /* box-shadow: 0 5px 0 black, 0 -5px 0 rgb(158, 158, 158); */
    box-shadow: -3px -3px 0 rgb(108, 97, 87);
}
main blockquote p {
    margin: 0;

    text-align: center;
    text-indent: 0;
}

/* list stuff */

main ul {
    /* border: rgb(108, 97, 87) solid 5px;
    border-right: 0;
    border-left: 0; */

    /* background-image: linear-gradient(.25turn, rgba(0, 0, 0, 0), #6c6157,rgba(0, 0, 0, 0)); */

    border: rgb(108, 97, 87) solid 3px;
    border-radius: 50px;

    background-color: rgb(29, 8, 0);

    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    padding: 3%;
}

main ul li {
    background-color: #8c4029;
    margin: .5em;
    padding: .5em;

    border-radius: 15px;
    /* box-shadow: 0 -3px 0 #8c4029; */
    box-shadow: -3px -3px 0 #f78967;

    transition: .1s;

    list-style-type: none;
}
main ul li:hover {
    /* perfectly resize without moving anything else */
    padding: .7em;
    margin: .3em;

    color: white;
}

/* turn certain links into buttons */
/* selector could be simplified (see the font selector at very top), but this works regardless so i'm keeping it */
section > a.link-guidelines, #files a, aside div > a, footer li a {
    width: 8em;
    padding: 8px;

    margin: auto;

    background-color: white;

    border-radius: 20px;

    color: black;
    text-decoration: none;

    box-shadow: 0 5px 5px black;
}
section > a.link-guidelines:hover, #files a:hover, aside div > a:hover, footer li a:hover {
    background-color: rgb(255, 253, 206);
}

main article {
    display: flex;
    margin: .5em auto auto auto;
}

main section {
    padding: 3%;
}
/* 2nd section for articles that have 2 */
article section:nth-child(2) {
    border-left: rgb(54 37 61) dotted 5px;
}

/* about portion */

main article#about {
    margin-top: auto;
}
#about section {
    flex-basis: 50%;
}

/* guidlines portion */

/* the single-lined p that follows the header */
#guidelines h2 + p {
    text-align: center;
}

/* contribute portion */

main article#contribute {
    display: flex;
    flex-wrap: wrap;
}
main article#contribute section.container {
    flex-basis: 50%;
}
main footer {
    margin: 2em auto;
}
main footer h3 {
    position: relative;
    top: -1em;
}

/* aside stuff */

aside {
    color: white;

    background-color: #8c4029;
    width: 17em;

    text-align: center;

    border-radius: 50%;
    /* height: 11em; */

    margin: auto;

    /* display: inline-block; */

    /* box-shadow: 0 -5px 0px rgb(108, 97, 87); */
}

aside.profile ul {
    padding: 0;
}

aside.profile li {
    list-style-type: none;
    text-align: center;
}
aside#styles li {
    text-align: left;
}

/* footer stuff */

footer {
    margin-top: 4em;
    color: white;
    text-align: center;
}

footer ul {
    list-style-type: none;
    padding: 0;
}
footer li {
    margin: 1.5em;
}

footer .link-github {
    margin: auto;
}

/* buttons in footer side-by-side */
.page-footer ul {
    display: flex;
    justify-content: space-between;
    width: 45em;
    margin: auto;
}
.page-footer p {
    padding: 0 1em;
}

/* mobile */
@media only screen and (max-width: 770px) {
    /* skip to main */
    .skip-link {
        /* top: 33em; */
        top: 500px;
    }
    .skip-link:after {
        /* rough center */
        left: .7em;
    }
    
    /* header */

    /* title */
    header h1 {
        font-size: 20vw;
    }

    /* subheader */
    header h2 {
        width: 95%;
    }

    /* authors */
    header p {
        width: 95%;
    }

    /* github button */
    header .link-github {
        /* center */
        left: 0;
    }

    /* nav */

    nav {
        position: static;
    }

    nav ul {
        flex-direction: column;
    }

    nav ul li {
        margin: 1.5vh 0;
    }

    nav ul li a {
        padding: 1vh 30%;

        font-size: 5vw;
    }

    /* main */

    main p {
        text-align: left;
    }

    main article {
        flex-direction: column;
    }

    /* 2nd section for articles that have 2 */
    article section:nth-child(2) {
        border-left: 0;
    }

    /* contribute portion */

    main article#contribute {
        flex-direction: column;
    }

    /* footer portion */

    /* fix the bottom buttons breaking by making them vertical */
    #files div {
        display: flex;
        flex-direction: column;
    }
    #files a {
        margin-top: .5em;
    }

    /* same with footer buttons */
    .page-footer ul {
        flex-direction: column;
        width: 100%;
    }
    .page-footer li {
        margin: .8em 0;
    }
}

